--- a/shopping/shopping/src/main/resources/templates/User/Items/ItemView.html
+++ b/shopping/shopping/src/main/resources/templates/User/Items/ItemView.html
@@ -9,17 +9,70 @@
 <body>
 <th:block th:replace="~{../static/inc/top.html}"></th:block>
 <section>
-    <div style="float:left;">
+    <div style="display:grid; grid-template-columns:1fr 1fr;">
     <div id="images" style="width:400px; height:400px; margin:20px 100px;" onmouseenter="btn_on()" onmouseleave="btn_off()">
         <th:block th:each="image, imageStat : ${images}">
             <div><img th:src="@{/tools/download(image = ${image})}" th:id="image+${imageStat.count}" style="width:400px; height:400px; border:1px solid;"></div>
         </th:block>
         <input type="hidden" id="image_count" value="1">
-        <span id="prev_btn" style="font-size:60px; color:lightgray; position:absolute; margin:-250px 0; display:none; cursor:pointer;" onclick="change_count(this.id), change_image()"><b>〈</b></span>
-        <span id="next_btn" style="font-size:60px; color:lightgray; position:absolute; margin:-250px 370px; display:none; cursor:pointer;" onclick="change_count(this.id), change_image()"><b>〉</b></span>
+        <span id="prev_btn" title="이전상품사진" style="font-size:60px; color:lightgray; position:absolute; margin:-250px 0; display:none; cursor:pointer;" onclick="change_count(this.id), change_image()"><b>〈</b></span>
+        <span id="next_btn" title="다음상품사진" style="font-size:60px; color:lightgray; position:absolute; margin:-250px 370px; display:none; cursor:pointer;" onclick="change_count(this.id), change_image()"><b>〉</b></span>
     </div>
-    <div id="info" style="width:500px;">
-        상품 정보 테스트
+    <div id="info" style="width:400px; height:400px;">
+        <table style="width:400px;">
+            <tr style="height:100px;">
+                <td>
+                    <div style="display:grid; grid-template-columns:1fr;">
+                        <div style="height:50px;">
+                            <p style="float:left; font-size:22px;"><b>Product Info</b></p>
+                            <p style="font-size:14px; color:gray; float:left; margin:30px 7px;"><b>제품정보</b></p>
+                        </div>
+                        <div style="font-size:14px;">
+                            <p style="font-weight:bold;">제품명</p> dd
+                            <p><b>태그</b></p>
+                            <p>#ABC</p>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+
+            <tr style="height:100px;">
+                <td>
+                    <div style="display:grid; grid-template-columns:1fr;">
+                        <div style="height:50px;">
+                            <p style="float:left; font-size:22px;"><b>Delivery Info</b></p>
+                            <p style="font-size:14px; color:gray; float:left; margin:30px 7px;"><b>배송정보</b></p>
+                        </div>
+                        <div style="font-size:14px;">
+                            <p style="font-weight:bold;">도착 예정일 : 내일 도착 예정</p>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+
+            <tr style="height:100px;">
+                <td>
+                    <div style="display:grid; grid-template-columns:1fr;">
+                        <div style="height:50px;">
+                            <p style="float:left; font-size:22px;"><b>Price Info</b></p>
+                            <p style="font-size:14px; color:gray; float:left; margin:30px 7px;"><b>가격정보</b></p>
+                        </div>
+                        <div style="font-size:14px;">
+                            <p style="font-weight:bold;">가격 : 1,000원</p>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <div>
+                    <input type="button" value="바로구매">
+                    <input type="button" value="장바구니">
+                    </div>
+                </td>
+            </tr>
+        </table>
     </div>
     </div>
 </section>
