--- a/shopping/shopping/src/main/resources/templates/User/Items/ItemView.html
+++ b/shopping/shopping/src/main/resources/templates/User/Items/ItemView.html
@@ -28,7 +28,7 @@
                             <p style="font-size:14px; color:gray; float:left; margin:30px 7px;"><b>제품정보</b></p>
                         </div>
                         <div style="font-size:14px;">
-                            <p style="font-weight:bold;">제품명</p> dd
+                            <p style="font-weight:bold;">제품명</p>
                             <p><b>태그</b></p>
                             <p>#ABC</p>
                         </div>
