--- a/shopping/shopping/src/main/resources/templates/User/Items/ItemView.html
+++ b/shopping/shopping/src/main/resources/templates/User/Items/ItemView.html
@@ -3,62 +3,69 @@
 <meta charset="UTF-8">
 
 <th:block th:replace="~{../static/css/home/top.css}"></th:block>
-<th:block th:replace="~{../static/css/User/Shopping.css}"></th:block>
+<th:block th:replace="~{../static/css/User/ShoppingView.css}"></th:block>
 <th:block th:replace="~{../static/css/home/bottom.css}"></th:block>
 
 <body>
 <th:block th:replace="~{../static/inc/top.html}"></th:block>
 <section>
-    <div style="display:grid; grid-template-columns:1fr 1fr;">
-    <div id="images" style="width:400px; height:400px; margin:20px 100px;" onmouseenter="btn_on()" onmouseleave="btn_off()">
+    <div class="main_div">
+    <div id="images" class="image_div" onmouseenter="btn_on()" onmouseleave="btn_off()">
         <th:block th:each="image, imageStat : ${images}">
-            <div><img th:src="@{/tools/download(image = ${image})}" th:id="image+${imageStat.count}" style="width:400px; height:400px; border:1px solid;"></div>
+            <div><img th:src="@{/tools/download(image = ${image})}" class="images" th:id="image+${imageStat.count}"></div>
         </th:block>
         <input type="hidden" id="image_count" value="1">
-        <span id="prev_btn" title="이전상품사진" style="font-size:60px; color:lightgray; position:absolute; margin:-250px 0; display:none; cursor:pointer;" onclick="change_count(this.id), change_image()"><b>〈</b></span>
-        <span id="next_btn" title="다음상품사진" style="font-size:60px; color:lightgray; position:absolute; margin:-250px 370px; display:none; cursor:pointer;" onclick="change_count(this.id), change_image()"><b>〉</b></span>
+        <span id="prev_btn" class="prev_btn" title="이전상품사진" onclick="change_count(this.id), change_image()"><b>〈</b></span>
+        <span id="next_btn" class="next_btn" title="다음상품사진" onclick="change_count(this.id), change_image()"><b>〉</b></span>
     </div>
-    <div id="info" style="width:400px; height:400px;">
-        <table style="width:400px;">
-            <tr style="height:100px;">
+    <div id="info" class="info_div">
+        <table class="info_table">
+            <tr>
                 <td>
-                    <div style="display:grid; grid-template-columns:1fr;">
-                        <div style="height:50px;">
-                            <p style="float:left; font-size:22px;"><b>Product Info</b></p>
-                            <p style="font-size:14px; color:gray; float:left; margin:30px 7px;"><b>제품정보</b></p>
+                    <div class="item_div">
+                        <div class="item_title">
+                            <p class="item_title1"><b>Product Info</b></p>
+                            <p class="item_title2"><b>제품정보</b></p>
                         </div>
-                        <div style="font-size:14px;">
-                            <p style="font-weight:bold;">제품명</p>
+                        <div class="item_content">
+                            <p class="item_name">제품명/&emsp;</p><p th:text="${item.item}"></p>
                             <p><b>태그</b></p>
-                            <p>#ABC</p>
+                            <div class="item_tag">
+                            <th:block th:each="tag : ${tag}">
+                                <p class="item_tag1"><b># [[${#strings.listSplit(tag,'/')[1]}]]</b>&emsp;</p>
+                            </th:block>
+                            </div>
                         </div>
                     </div>
                 </td>
             </tr>
 
-            <tr style="height:100px;">
+            <tr>
                 <td>
-                    <div style="display:grid; grid-template-columns:1fr;">
-                        <div style="height:50px;">
-                            <p style="float:left; font-size:22px;"><b>Delivery Info</b></p>
-                            <p style="font-size:14px; color:gray; float:left; margin:30px 7px;"><b>배송정보</b></p>
+                    <div class="delivery_div">
+                        <div class="delivery_title">
+                            <p class="delivery_title1"><b>Delivery Info</b></p>
+                            <p class="delivery_title2"><b>배송정보</b></p>
                         </div>
-                        <div style="font-size:14px;">
+                        <div class="delivery_content">
                             <p style="font-weight:bold;">도착 예정일 : 내일 도착 예정</p>
                         </div>
                     </div>
                 </td>
             </tr>
 
-            <tr style="height:100px;">
+            <tr>
                 <td>
-                    <div style="display:grid; grid-template-columns:1fr;">
-                        <div style="height:50px;">
-                            <p style="float:left; font-size:22px;"><b>Price Info</b></p>
-                            <p style="font-size:14px; color:gray; float:left; margin:30px 7px;"><b>가격정보</b></p>
+                    <div class="price_div">
+                        <div class="price_title">
+                            <p class="price_title1"><b>Price Info</b></p>
+                            <p class="price_title2"><b>가격정보</b></p>
                         </div>
-                        <div style="font-size:14px;">
-                            <p style="font-weight:bold;">가격 : 1,000원</p>
+                        <div class="price_content">
+                            <p id="down_btn" class="down_btn" onclick="count_info(this.id)">◀</p>
+                            <input type="text" id="quantity" value="1" class="quantity" readonly>
+                            <p id="up_btn" class="up_btn" onclick="count_info(this.id)">▶</p>
+                            <p class="price">&emsp;가격 : 1,000원</p>
                         </div>
                     </div>
                 </td>
@@ -67,8 +74,8 @@
             <tr>
                 <td>
                     <div>
-                    <input type="button" value="바로구매">
-                    <input type="button" value="장바구니">
+                    <input type="button" value="바로구매" class="direct_btn">&emsp;
+                    <input type="button" value="장바구니" class="basket_btn">
                     </div>
                 </td>
             </tr>
@@ -146,6 +153,27 @@
             image2.style.display = "none";
             image3.style.display = "block";
         }
+    }
+    function count_info(id)
+    {
+        var quantity = parseInt(document.getElementById("quantity").value);
+        if(id == "up_btn")
+        {
+            quantity = quantity + 1;
+        }
+        else if(id == "down_btn")
+        {
+            if(quantity<2)
+            {
+                quantity = 1;
+            }
+            else
+            {
+                quantity = quantity - 1;
+            }
+        }
+
+        document.getElementById("quantity").value = quantity;
     }
 </script>
 </html>
