--- a/shopping/shopping/src/main/resources/templates/Login/home.html
+++ b/shopping/shopping/src/main/resources/templates/Login/home.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<meta charset="UTF-8">
+<head>
+    <meta charset="UTF-8">
+    <title>Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
+</head>
+
 
 <th:block th:replace="~{../static/css/home/top.css}"></th:block>
 <th:block th:replace="~{../static/css/home/bottom.css}"></th:block>
@@ -12,15 +17,67 @@
     <table style="width:100%">
         <tr>
             <td align="center">
-                <img src="/image/beer1.jpg" alt="fail" style="width:24%; height:200px;">
-                <img src="/image/beer2.jpg" alt="fail" style="width:24%; height:200px;">
-                <img src="/image/beer3.jpg" alt="fail" style="width:24%; height:200px;">
-                <img src="/image/beer4.jpg" alt="fail" style="width:24%; height:200px;">
+                <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active" data-bs-interval="5000">
+                            <img src="/image/beer1.jpg" class="d-block w-100" alt="..." style="width:100%; height:100%;"/>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="/image/beer2.jpg" class="d-block w-100" alt="..." style="width:100%; height:100%;"/>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="/image/beer3.jpg" class="d-block w-100" alt="..." style="width:100%; height:100%;"/>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="/image/beer4.jpg" class="d-block w-100" alt="..." style="width:100%; height:100%;"/>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="/image/beer5.jpg" class="d-block w-100" alt="..." style="width:100%; height:100%;"/>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
             </td>
         </tr>
     </table>
+    <br>
+    <div>
+        <table>
+            <tr>
+                <td>
+                    <span>WEEKLY BEST ITEMS</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="/image/beer1.jpg" style="width:300px; height:300px;">
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div>
+        <table>
+            <tr>
+                <td>
+                    <span>NEWLY ADDED ITEMS</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="/image/beer1.jpg" style="width:300px; height:300px;">
+                </td>
+            </tr>
+        </table>
+    </div>
 </section>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <th:block th:replace="~{../static/inc/bottom.html}"></th:block>
 </body>
 </html>
