--- a/shopping/shopping/src/main/resources/templates/Login/home.html
+++ b/shopping/shopping/src/main/resources/templates/Login/home.html
@@ -14,70 +14,138 @@
 <th:block th:replace="~{../static/inc/top.html}"></th:block>
 
 <section>
-    <table style="width:100%">
-        <tr>
-            <td align="center">
-                <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active" data-bs-interval="5000">
-                            <img src="/image/beer1.jpg" class="d-block w-100" alt="..." style="width:100%; height:100%;"/>
+    <div>
+        <table style="width:100%">
+            <tr>
+                <td align="center">
+                    <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" data-bs-interval="5000">
+                                <img src="/image/beer1.jpg" class="d-block w-100" alt="..." style="width:100%; height:100%;"/>
+                            </div>
+                            <div class="carousel-item" data-bs-interval="5000">
+                                <img src="/image/beer2.jpg" class="d-block w-100" alt="..." style="width:100%; height:100%;"/>
+                            </div>
+                            <div class="carousel-item" data-bs-interval="5000">
+                                <img src="/image/beer3.jpg" class="d-block w-100" alt="..." style="width:100%; height:100%;"/>
+                            </div>
+                            <div class="carousel-item" data-bs-interval="5000">
+                                <img src="/image/beer4.jpg" class="d-block w-100" alt="..." style="width:100%; height:100%;"/>
+                            </div>
+                            <div class="carousel-item" data-bs-interval="5000">
+                                <img src="/image/beer5.jpg" class="d-block w-100" alt="..." style="width:100%; height:100%;"/>
+                            </div>
                         </div>
-                        <div class="carousel-item" data-bs-interval="5000">
-                            <img src="/image/beer2.jpg" class="d-block w-100" alt="..." style="width:100%; height:100%;"/>
-                        </div>
-                        <div class="carousel-item" data-bs-interval="5000">
-                            <img src="/image/beer3.jpg" class="d-block w-100" alt="..." style="width:100%; height:100%;"/>
-                        </div>
-                        <div class="carousel-item" data-bs-interval="5000">
-                            <img src="/image/beer4.jpg" class="d-block w-100" alt="..." style="width:100%; height:100%;"/>
-                        </div>
-                        <div class="carousel-item" data-bs-interval="5000">
-                            <img src="/image/beer5.jpg" class="d-block w-100" alt="..." style="width:100%; height:100%;"/>
-                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
-            </td>
-        </tr>
-    </table>
+                </td>
+            </tr>
+        </table>
+    </div>
     <br>
     <div>
-        <table>
-            <tr>
-                <td>
-                    <span>WEEKLY BEST ITEMS</span>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <img src="/image/beer1.jpg" style="width:300px; height:300px;">
-                </td>
-            </tr>
-        </table>
+        <div style="width:100%; height:580px;">
+            <table style="margin:0 auto;">
+                <tr>
+                    <td style="text-align:center;">
+                        <span style="font-weight:bold; font-size:22px; color:slategray;">WEEKLY BEST ITEMS</span><br>
+                        <span style="color:saddlebrown; font-size:14px;">한주간 베스트 아이템을 만나보세요.</span>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <br>
+                        <div style="display:grid; grid-template-columns:1fr 1fr 1fr 1fr 1fr; grid-column-gap:30px;">
+                            <div th:each="NewItem, NewItemStat : ${NewItem}" th:style="${NewItemStat.count > 5 ? 'display:none' : 'display:block'}" style="float:left;">
+                                <img th:src="@{/tools/download(image = ${NewItem.image1})}" style="width:300px; height:360px; border:1px solid; border-color:lightgray;">
+                                <br>
+                                &emsp;<span th:text="${NewItem.item}" style="font-weight:bold; font-size:20px;"></span>
+                                <hr style="margin:0 auto;">
+                                <div style="float:right;">
+                                    &emsp;
+                                    <span style="font-size:14px;">판매가:&ensp;</span>
+                                    <span th:text="${#numbers.formatInteger(NewItem.price, 3, 'COMMA')}" style="font-weight:bold;"></span>
+                                    <span style="font-size:10px; font-weight:bold;">&ensp;WON</span>
+                                </div>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div style="width:100%; background-color:lavender; height:580px;">
+            <br><br>
+            <table style="margin:0 auto;">
+                <tr>
+                    <td style="text-align:center;">
+                        <span style="font-weight:bold; font-size:20px; color:slategray;">NEWLY ADDED ITEMS</span><br>
+                        <span style="color:saddlebrown; font-size:14px;">매일매일 업데이트되는 신상 맥주</span>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        <br>
+                        <div style="display:grid; grid-template-columns:1fr 1fr 1fr 1fr 1fr; grid-column-gap:30px;">
+                            <div th:each="NewItem, NewItemStat : ${NewItem}" th:id="${'image'+NewItemStat.count}" th:style="${NewItemStat.count > 5 ? 'display:none' : 'display:block'}" style="float:left;">
+                                <img th:src="@{/tools/download(image = ${NewItem.image1})}" style="width:300px; height:360px; border:1px solid; border-color:lightgray;">
+                                <br>
+                                &emsp;<span th:text="${NewItem.item}" style="font-weight:bold; font-size:20px;"></span>
+                                <hr style="margin:0 auto;">
+                                <div style="float:right;">
+                                    &emsp;
+                                    <span style="font-size:14px;">판매가:&ensp;</span>
+                                    <span th:text="${#numbers.formatInteger(NewItem.price, 3, 'COMMA')}" style="font-weight:bold;"></span>
+                                    <span style="font-size:10px; font-weight:bold;">&ensp;WON</span>
+                                </div>
+                            </div>
+                            <input type="hidden" name="image_count" id="image_count" value="3">
+                            <input type="button" value="〈" onclick="change_image('prev')" style="position:absolute; margin:150px -50px; background-color:transparent; border-color:transparent; font-size:50px; color:slategray;">
+                            <input type="button" value="〉" onclick="change_image('next')" style="position:absolute; margin:150px 1630px; background-color:transparent; border-color:transparent; font-size:50px; color:slategray;">
+                        </div>
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
-    <div>
-        <table>
-            <tr>
-                <td>
-                    <span>NEWLY ADDED ITEMS</span>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <img src="/image/beer1.jpg" style="width:300px; height:300px;">
-                </td>
-            </tr>
-        </table>
-    </div>
+    <br>
+    <br>
 </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <th:block th:replace="~{../static/inc/bottom.html}"></th:block>
 </body>
+<script>
+    function change_image(value)
+    {
+        var count = parseInt(document.getElementById("image_count").value);
+        if(value == "prev")
+        {
+            if(count <= 3)
+            {
+                count = 4;
+            }
+            document.getElementById("image"+(count+2)).style.display = "none";
+            document.getElementById("image"+(count-3)).style.display = "block";
+            document.getElementById("image_count").value = count - 1;
+        }
+        else if(value == "next")
+        {
+            if(count >= 7)
+            {
+                count = 7;
+            }
+            document.getElementById("image"+(count-2)).style.display = "none";
+            document.getElementById("image"+(count+3)).style.display = "block";
+            document.getElementById("image_count").value = count + 1;
+        }
+
+    }
+</script>
 </html>
