--- a/shopping/shopping/src/main/resources/templates/Join/join.html
+++ b/shopping/shopping/src/main/resources/templates/Join/join.html
@@ -10,7 +10,7 @@
 <th:block th:replace="~{../static/inc/top.html}"></th:block>
 
 <section>
-    <form action="/join_proc" method="post" name="mf">
+    <form action="/main/join_proc" method="post" name="mf">
         <table class="join_table">
 
             <tr>
