--- a/shopping/shopping/src/main/resources/static/css/Items/ItemType.css
+++ b/shopping/shopping/src/main/resources/static/css/Items/ItemType.css
@@ -1,9 +1,7 @@
 <style>
 .ItemType
 {
-    display : flex;
-    justify-content : center;
-    align-items : center;
+    height:350px;
 }
 
 .type_btn
