--- a/shopping/shopping/src/main/resources/templates/Admin/Items/ItemCategory.html
+++ b/shopping/shopping/src/main/resources/templates/Admin/Items/ItemCategory.html
@@ -11,78 +11,83 @@
 <th:block th:replace="~{../static/inc/top.html}"></th:block>
 
 <section>
-    <form action="/admin/CategoryRegister" method="post">
-        <table >
+    <div style="margin:100px auto;">
+        <div>
+            <form action="/admin/CategoryRegister" method="post">
+                <table style="margin:0 700px;">
 
-            <tr>
-                <td>
-                    <h2>Category</h2>
-                </td>
-            </tr>
+                    <tr>
+                        <td colspan="5" style="text-align:center;">
+                            <span style="font-weight:bold; font-size:24px;">Category</span>
+                        </td>
+                    </tr>
 
-            <tr>
-                <td>
-                    <select name="category1" id="category1" onchange="change_label1(this.value)">
-                        <option value="none">선택</option>
-                        <option value="category1">1차 분류</option>
+                    <tr>
+                        <td>
+                            <select name="category1" id="category1" onchange="change_label1(this.value)">
+                                <option value="none">선택</option>
+                                <option value="category1">1차 분류</option>
+                                <th:block th:each="first, firstStat : ${first}">
+                                <option th:value="${first.code}">[[${first.category_name}]]</option>
+                                </th:block>
+                            </select>
+                        </td>
+
+                        <td>
+                            <select name="category2" id="category2" class="category2" onchange="change_label2(this.value)"></select>
+                        </td>
+
+                        <td>
+                            <select name="category3" id="category3" class="category3" onchange="change_label3(this.value)"></select>
+                        </td>
+
+                        <td>
+                            <input type="text" name="code" id="code" class="code" value="none" readonly>
+                            <input type="text" name="category_name" id="category_name">
+                        </td>
+                        <td><input type="submit" value="등록"></td>
+                    </tr>
+                </table>
+            </form>
+        </div>
+
+        <br><br>
+        <div>
+            <table class="modify_table" style="margin:0 600px;">
+                <tr>
+                    <td colspan="3" class="modify_title"><h2>Category List</h2></td>
+                </tr>
+
+                <tr>
+                    <td class="modify_code_info" colspan="3">
+                        <form>
+                        <input type="text" name="modify_code" id="modify_code" class="modify_code" readonly>
+                        <input type="text" name="modify_name" id="modify_name" class="modify_name">
+                            <button type="submit" formaction="/admin/Category_modify" formmethod="post">수정</button>
+                            <button type="submit" formaction="/admin/Category_delete" formmethod="post" onclick="return category_check()">삭제</button>
+                        </form>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="first_td" id="first_td">
                         <th:block th:each="first, firstStat : ${first}">
-                        <option th:value="${first.code}">[[${first.category_name}]]</option>
+                            <span th:id="first+${firstStat.count}" th:text="${first.category_name}" class="first_class" th:onclick="set_second([[${first.code}]],this.id,[[${first.category_name}]])"></span>
+                            <br><br>
                         </th:block>
-                    </select>
-                </td>
+                    </td>
 
-                <td>
-                    <select name="category2" id="category2" class="category2" onchange="change_label2(this.value)"></select>
-                </td>
+                    <td id="second_td" class="second_td">
+                        <div id="second" class="second"></div>
+                    </td>
 
-                <td>
-                    <select name="category3" id="category3" class="category3" onchange="change_label3(this.value)"></select>
-                </td>
-
-                <td>
-                    <input type="text" name="code" id="code" class="code" value="none" readonly>
-                    <input type="text" name="category_name" id="category_name">
-                </td>
-                <td><input type="submit" value="등록"></td>
-            </tr>
-        </table>
-    </form>
-
-    <br><br>
-
-    <table class="modify_table">
-        <tr>
-            <td colspan="3" class="modify_title"><h2>Category List</h2></td>
-        </tr>
-
-        <tr>
-            <td class="modify_code_info" colspan="3">
-                <form>
-                <input type="text" name="modify_code" id="modify_code" class="modify_code" readonly>
-                <input type="text" name="modify_name" id="modify_name" class="modify_name">
-                    <button type="submit" formaction="/admin/Category_modify" formmethod="post">수정</button>
-                    <button type="submit" formaction="/admin/Category_delete" formmethod="post" onclick="return category_check()">삭제</button>
-                </form>
-            </td>
-        </tr>
-
-        <tr>
-            <td class="first_td" id="first_td">
-                <th:block th:each="first, firstStat : ${first}">
-                    <span th:id="first+${firstStat.count}" th:text="${first.category_name}" class="first_class" th:onclick="set_second([[${first.code}]],this.id,[[${first.category_name}]])"></span>
-                    <br><br>
-                </th:block>
-            </td>
-
-            <td id="second_td" class="second_td">
-                <div id="second" class="second"></div>
-            </td>
-
-            <td id="third_td" class="third_td">
-                <div id="third" class="third"></div>
-            </td>
-        </tr>
-    </table>
+                    <td id="third_td" class="third_td">
+                        <div id="third" class="third"></div>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
 </section>
 
 <th:block th:replace="~{../static/inc/bottom.html}"></th:block>
