--- a/shopping/shopping/src/main/resources/templates/Admin/Items/ItemList.html
+++ b/shopping/shopping/src/main/resources/templates/Admin/Items/ItemList.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-
-<meta charset="UTF-8">
+<head>
+    <meta charset="UTF-8">
+    <title>ItemList</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
+</head>
 
 <th:block th:replace="~{../static/css/home/top.css}"></th:block>
 <th:block th:replace="~{../static/css/Items/ItemList.css}"></th:block>
 <th:block th:replace="~{../static/css/home/bottom.css}"></th:block>
+
 
 <body>
 <th:block th:replace="~{../static/inc/top.html}"></th:block>
@@ -42,7 +46,6 @@
                 &emsp;
                 <input type="text" name="keyword" id="keyword" style="width:100px;">
                 <input type="button" value="검색" onclick="search_item()">
-                <br><br>
             </td>
         </tr>
 
@@ -69,14 +72,29 @@
 
         <tr>
             <td colspan="5" style="text-align:center;">
-                <a th:if="${nowPage != startPage} and ${endPage != 0}" th:href="@{/admin/ItemList(page = 0,keyword = ${keyword}, category = ${category})}">⏪</a>
-                <a th:if="${nowPage != startPage} and ${endPage != 0}" th:href="@{/admin/ItemList(page = ${nowPage - 2},keyword = ${keyword}, category = ${category})}">◀</a>
-                <th:block th:each="page : ${#numbers.sequence(startPage, endPage)}" style="margin:0 auto;">
-                    <a th:if="${page != nowPage} and ${endPage != 0}" th:href="@{/admin/ItemList(page = ${page - 1},keyword = ${keyword}, category = ${category})}" th:text="${page}"></a>
-                    <strong th:if="${page == nowPage}" th:text="${page}" style="color : red"></strong>
-                </th:block>
-                <a th:if="${nowPage != endPage} and ${endPage != 0}" th:href="@{/admin/ItemList(page = ${nowPage},keyword = ${keyword}, category = ${category})}">▶</a>
-                <a th:if="${nowPage != endPage} and ${endPage != 0}" th:href="@{/admin/ItemList(page = ${maxPage-1},keyword = ${keyword}, category = ${category})}">⏩</a>
+                <br>
+                <ul class="pagination" style="display:flex; justify-content:center;">
+
+                    <li class="page-item">
+                        <a class="page-link" th:href="@{/admin/ItemList(page = ${nowPage - 2},keyword = ${keyword}, category = ${category})}" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+
+                    <th:block th:each="page : ${#numbers.sequence(startPage, endPage)}" style="margin:0 auto;">
+                    <li class="page-item">
+                        <a class="page-link" th:if="${page != nowPage} and ${endPage != 0}" th:href="@{/admin/ItemList(page = ${page - 1},keyword = ${keyword}, category = ${category})}" th:text="${page}"></a>
+                        <a class="page-link" th:if="${page == nowPage}" href="#" th:text="${page}" style="font-weight : bold;"></a>
+                    </li>
+                    </th:block>
+
+                    <li class="page-item">
+                        <a class="page-link" th:href="@{/admin/ItemList(page = ${nowPage},keyword = ${keyword}, category = ${category})}" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+
+                </ul>
             </td>
         </tr>
 
