--- a/shopping/shopping/src/main/resources/templates/Admin/Items/ItemRegister.html
+++ b/shopping/shopping/src/main/resources/templates/Admin/Items/ItemRegister.html
@@ -11,7 +11,7 @@
 
 <section>
     <form action="/admin/ItemRegister_proc" method="post" enctype="multipart/form-data">
-    <table>
+    <table style="margin:50px 760px;">
         <tr>
             <td colspan="10" class="col_td1">
                 <h2>상품 등록</h2>
@@ -81,6 +81,7 @@
 
         <tr>
             <td colspan="10" class="col_td2"><br>
+                <br><br>
                 <a th:href="@{/admin/ItemType}">
                 <input type="button" value="뒤로가기" class="back_btn">
                 </a>&emsp;
