--- a/shopping/shopping/src/main/resources/templates/Admin/Items/ItemCategory.html
+++ b/shopping/shopping/src/main/resources/templates/Admin/Items/ItemCategory.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<meta charset="UTF-8">
+<head>
+    <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <title>Category</title>
+</head>
 
 <th:block th:replace="~{../static/css/home/top.css}"></th:block>
 <th:block th:replace="~{../static/css/Items/ItemCategory.css}"></th:block>
@@ -14,7 +18,7 @@
     <div style="margin:100px auto;">
         <div>
             <form action="/admin/CategoryRegister" method="post">
-                <table style="margin:0 700px;">
+                <table style="margin:0 auto; border:1px solid; width:80%;">
 
                     <tr>
                         <td colspan="5" style="text-align:center;">
@@ -23,29 +27,34 @@
                     </tr>
 
                     <tr>
-                        <td>
-                            <select name="category1" id="category1" onchange="change_label1(this.value)">
-                                <option value="none">선택</option>
-                                <option value="category1">1차 분류</option>
-                                <th:block th:each="first, firstStat : ${first}">
-                                <option th:value="${first.code}">[[${first.category_name}]]</option>
-                                </th:block>
-                            </select>
+                        <td style="text-align:center;">
+                            <div class="btn-group dropend">
+                                <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">1차 카테고리</button>
+                                <ul class="dropdown-menu">
+                                    <li><button class="dropdown-item" type="button" value="category1" onclick="change_label1(this.value)">1차 카테고리 추가</button></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li th:each="first, firstStat : ${first}">
+                                        <button class="dropdown-item" type="button" th:value="${first.code}" th:text="${first.category_name}" onclick="change_label1(this.value)"></button>
+                                    </li>
+                                </ul>
+                            </div>
                         </td>
 
                         <td>
-                            <select name="category2" id="category2" class="category2" onchange="change_label2(this.value)"></select>
-                        </td>
-
-                        <td>
-                            <select name="category3" id="category3" class="category3" onchange="change_label3(this.value)"></select>
+                            <div class="btn-group dropend" id="category2" style="display:none;">
+                                <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">2차 카테고리</button>
+                                <ul class="dropdown-menu" id="dropdown-menu2">
+                                    <li><button class="dropdown-item" type="button" value="category1">2차 카테고리 추가</button></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                </ul>
+                            </div>
                         </td>
 
                         <td>
                             <input type="text" name="code" id="code" class="code" value="none" readonly>
                             <input type="text" name="category_name" id="category_name">
                         </td>
-                        <td><input type="submit" value="등록"></td>
+                        <td><input type="button" value="등록"></td>
                     </tr>
                 </table>
             </form>
@@ -93,6 +102,7 @@
 <th:block th:replace="~{../static/inc/bottom.html}"></th:block>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <script th:inline="javascript" src="/js/Items/ItemCategory.js"></script>
 </html>
 
